# rxvision

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Makefile  README.md  architecture-review.md  docker-compose.prod.yml  docker-compose.yml  quick-wins.md  responsive-audit.md  responsive-fixes-plan.md  responsive-qa-results.md  security-review.md  technical-debt.md  technology-stack.md  ui-ux-review.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: noeton_inbound.py
backend/app/core/: config.py  db.py  deps.py  ratelimit.py  security.py
backend/app/middleware/: audit.py
backend/app/repositories/: advisor.py  base.py  closing.py  consents.py  contacts.py  copilot.py  doctors.py  future.py  icd10.py  loyalty.py  orders_delivery.py  patient_intelligence.py  patient_portal.py  patients.py  pharmacat.py  pharmacy_availability.py  pharmacy_catalog.py  pharmacyone.py  prescriptions.py  profitability.py  reimbursement.py  scans.py  subscriptions.py  sync_jobs.py  tenants.py  users.py  vaccination_campaigns.py
backend/app/schemas/: gdpr.py  ingestion.py  subscriptions.py  tenants.py  users.py
backend/app/services/: aade_service.py  account_service.py  addon_service.py  auth_service.py  autoscription_service.py  billing_service.py  comms.py  consent.py  contacts_import.py  (+25 more)
backend/scripts/: backfill_doctor_contacts.py  backfill_wholesale_markup.py  seed.py
backend/tests/: test_email_template.py  test_gdpr.py  test_hdika_client.py  test_ingestion.py  test_ingestion_engine.py  test_invariants.py  test_tenant_isolation.py
(+338 files in other folders)
