[project]
name = "rxvision-api"
version = "0.1.0"
description = "RxVision — pharmacy prescription analytics API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "motor>=3.4",                # async MongoDB driver
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",  # JWT
    "argon2-cffi>=23.1",         # password hashing
    "redis>=5.0",
    "celery>=5.4",
    "lxml>=5.2",                 # GESY XML parsing
    "httpx>=0.27",               # HDIKA adapter
    "python-multipart>=0.0.18",   # uploads
    "hvac>=2.3",                 # HashiCorp Vault client
    "pyotp>=2.9",                # TOTP / MFA verification
    "Pillow>=10.2",             # image preprocessing for optical audit
    "pytesseract>=0.3.10",       # Tesseract OCR (self-hosted)
    "pyzbar>=0.1.9",             # QR / barcode decoding
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.4", "mongomock-motor>=0.0.29"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
